--- a/topsecret.html
+++ b/topsecret.html
@@ -7,34 +7,9 @@
 
 </head>
 <center>
-    <h1 class="nocss">ERROR 500 OCCURED WHILE DISPLAYING THIS WEBPAGE. PLEASE TRY AGAIN.</p>
-<h2> The following is a log of unattended server access that we retrived on <kbd>DATA REDACTED</kbd>. To comply with the FBI, some data has been redacted.</h2><hr>
-    <h2>
-    <body><h1>ATTENTION ALL PERSONELL</h1>
-    <p class="lead">THERE HAS BEEN A CORE BREACH ON SECTORS
-        <br><strong>1,2,3,4,9,12</strong>
-        <br>ALL SAFTEY PERSONNELL PLEASE REPORT TO YOUR STATIONS. ALL RESEARCHERS, PLEASE REPORT TO YOUR SECTOR DESIGNATED SAFE ZONE.
-        <br>
-        <kbd>//transmission_interrupted_by_outside_source_</kbd>
-        <br>Greetings, my name is <kbd>[DATA EXPUNGED]</kbd> and I am here to talk to you about the <kbd>[REDACTED]</kbd> project. First, let me bring you to the supposed <kbd>[REDACTED]</kbd> "saftey officers".
-        <br>
-        <kbd>//transmission_frequency_changed_</kbd>
-        <br>1: nice call on that "core breach", we'll definetley be able to get the <kbd>DATA EXPUNGED</kbd> now.
-        <br>2: Yes, we can access it once one of these people give us the password for it.
-        <br>1: I say we kill them until they give it
-        <br>3: NO NO NO! That is a ba-<kbd>//transmission_ended_</kbd>
-        <br>1: With him out of the way, we will be able to get anything we need for <kbd>[DATA EXPUNGED]</kbd> now.
-        <br>
-        <kbd>//transmission_frequency_changed_</kbd>
-        <br>You see? <strong>THEY DO NOT CARE FOR YOUR SAFTEY. ANYONE INSIDE <kbd>[REDACTED]</kbd> LEAVE NOW OR YOU WILL DIE!</strong>
-        <br>
-        <kbd>//transmission_ended_</kbd>
-
-    </p>
-    </body>
-    <foot>
-        <h2>Click <a href="index.html">here</a> to return to the normal website. Tell nobody of what you have seen.</h2>
-    </foot>
+    <a href="index.html">
+        <img src="img/garywashere.jpg" />
+    </a>
 
 </center>
 
