--- a/404.html
+++ b/404.html
@@ -97,7 +97,11 @@
         <div class="jumbotron">
             <h1>Well thats unfortunate.</h1>
             <h2 style="color:lightgray">I tried my hardest :( -The Server </h2>
-            <p class="lead">Are you lost? You tried to go to a page that does not exsist Click the button below to go to <a href="index.html">the home page</a><small> Or there I don't care </small> 
+            <p class="lead">Are you lost? You tried to go to
+                <script>
+                    document.write(document.URL);
+                </script>
+                Click the button below to go to <a href="index.html">the home page</a><small> Or there I don't care </small> 
             </p>
             <p><a class="btn btn-lg btn-success" href="index.html" role="button">Click Here</a>
             </p>
