--- a/404.html
+++ b/404.html
@@ -38,90 +38,28 @@
 
 
     <link href="css/justified-nav.css" rel="stylesheet">
-    <!-- STYLE SHEET FOR UNI-NAVBAR-->
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-</head>
-
-<body>
-    <!--<center><p style="color:red;font-size:20px;"> Warning Text </p></center>-->
     <div class="container">
-
-        <div class="masthead">
+        <div</div>
             <center>
-                <h3 class="text-muted">Storm Network</h3>
+
+                <body>
+                    <div class="container">
+
+                        <div class="masthead">
+                            <center>
+                                <h3 class="text-muted">sNet 404 Error</h3>
+                                <h4 class="text-muted">The worlds best 404 page</h4>
+                            </center>
+                        </div>
+                    </div>
+                    <p class="notfound">
+                        <script>
+                            document.write(document.URL);
+                        </script>
+                        isn't even real.</p>
+                    <p class="lead"><a href="index.html">Wanna go to the home page?</a>
+                    </p>
+                </body>
             </center>
-            <ul class="nav nav-justified">
-
-                <li><a href="index.html">Home</a>
-                </li>
-                <li><a href="http://stormyjet.github.io/blog.html">Blog</a>
-                </li>
-                <li><a href="http://twitter.com/stormyjet">Twitter</a>
-                </li>
-                <!-- This line to be replaced with proper source-->
-                <!--<li><a href="https://github.com/stormyjet/stormyjet.github.io">Source</a></li>-->
-                <li><a href="http://meteorgame.github.io">Meteor Game</a>
-                </li>
-                <li><a href="http://mcfs.github.io">MCFS</a>
-                </li>
-                <li><a href="http://stormyjettest.github.io">Test Site</a>
-                </li>
-                <li class="disabled"><a href="#">404 Error :(</a>
-                </li>
-
-            </ul>
-        </div>
-        <!--<li class="active"><a href="#">Test</a></li>
-          <li><a href="http://twitter.com/stormyjet">Twitter</a></li>
-          
-          <!--<li><a href="http://meteorgame.github.io">Meteor Game</a></li>
-          <li><a href="http://mcfs.github.io">MCFS</a></li>-->
-
-
-        <center>
-            <p class="nocss">Whoa there.
-                <br>Looks like the page didn't load properly.
-                <br>Click <a href="#">Here</a> to reload the page. Hopefully it works! Sorry for the inconvenience
-            </p>
-
-        </center>
-
-
-        <!-- Jumbotron -->
-
-        <div class="jumbotron">
-            <h1>Well thats unfortunate.</h1>
-            <h2 style="color:lightgray">I tried my hardest :( -The Server </h2>
-            <p class="lead">Are you lost? You tried to go to
-                <script>
-                    document.write(document.URL);
-                </script>
-                Click the button below to go to <a href="index.html">the home page</a><small> Or there I don't care </small> 
-            </p>
-            <p><a class="btn btn-lg btn-success" href="index.html" role="button">Click Here</a>
-            </p>
-        </div>
-
-        <!-- Example row of columns -->
-
-
-        <!-- Site footer -->
-        <div class="footer">
-            <p>Powered by <a href="dashboard.html">Storm Engine</a> and <a href="network.html">sNet</a>.
-            </p>
-        </div>
-    </div>
-    <!-- /container -->
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-</body>
 
 </html>
