--- a/404.html
+++ b/404.html
@@ -47,8 +47,8 @@
 
                         <div class="masthead">
                             <center>
-                                <h3 class="text-muted">sNet 404 Error</h3>
-                                <h4 class="text-muted">The worlds best 404 page</h4>
+                                <h1 class="text-muted">You messed up.</h1>
+
                             </center>
                         </div>
                     </div>
