--- a/blog.html
+++ b/blog.html
@@ -93,10 +93,12 @@
         <!-- Jumbotron -->
 
         <div class="jumbotron">
-            <h1>Backend things today</h1>
+            <h1>New 404 page</h1>
+            <p class="lead">Today I worked on a brand new 404 page. Try going to /404 or any page that probably does not exsist. Cool amirite.</p>
+            <h2>Backend things today</h2>
             <p class="lead">Today I worked on some backend stuff for my sites. I also worked on some frontend things as well. I polished up the sNet page.
                 <br>In other news, I made a page that just lists all of the things I used and still use. It's available over at /dashboard. Enjoy it.</p>
-            <h3>The Divergent Movie [Spoilers]</h3>
+            <h2>The Divergent Movie [Spoilers]</h2>
             <br>
             <p class="lead">Oh boy... Ooh boy (rant incoming)
                 <br>So I went to go see the new movie Divergent, don't get me wrong it was a great movie, I loved mostly every part about it, except for one specific part.
@@ -133,9 +135,9 @@
 
             <!-- Site footer -->
             <div class="footer">
-            <p>Powered by <a href="dashboard.html">Storm Engine</a> and <a href="network.html">sNet</a>.
-            </p>
-        </div>
+                <p>Powered by <a href="dashboard.html">Storm Engine</a> and <a href="network.html">sNet</a>.
+                </p>
+            </div>
         </div>
         <!-- /container -->
 
