--- a/index.html
+++ b/index.html
@@ -29,142 +29,70 @@
     <meta name="msapplication-square310x310logo" content="/img/mstile-310x310.png">
     <meta name="msapplication-wide310x150logo" content="/img/mstile-310x150.png">
 
-    <title>Stormy's Website</title>
+
+    <title>Stormy's Site</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
 
+    <link href="css/cover.css" rel="stylesheet">
 
+    <!-- Just for debugging purposes. Don't actually copy this line! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 
-    <link href="css/justified-nav.css" rel="stylesheet">
-    <!-- STYLE SHEET FOR UNI-NAVBAR-->
-
-    <!--[if lt IE 7]>
-    <script type="text/javascript">
-
-   window.location="internetexplorer.html";
-
-</script>
-    <![endif]-->
-    <!--[if gte IE 7]>
-    <script type="text/javascript">
-
-   window.location="internetexplorer.html";
-
-</script>
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
 
 <body>
-    <center>
-        <!--
-        <div class="alert alert-success">
-            <p style="font-size:22px"><strong>Wonderful!</strong> You have read this important alert</p>
-        </div>-->
-        <div class="alert alert-info">
 
-            <p style="font-size:22px;">
-                <strong>Heads Up!</strong> StormyJet.com is under some maintainence. Things may be changed or all access to the site may be blocked.</p>
-        </div>
-        <!--<div class="alert alert-warning">
-            <p style="font-size:22px"><strong>warning text in bold</strong>warning text</p>
-        </div>
-        <div class="alert alert-danger">
-            <p style="font-size:22px"><strong>Uh-Oh.</strong> Looks like something bad happened, fix it?</p>
-        </div>-->
-    </center>
-    <noscript>
-        <center>
-            <div class=" alert alert-info ">
-                <strong>Hey you! </strong>Would you kindly consider enabling Javascript? No screamers will ever be on this site! I promise!</div>
-        </center>
-    </noscript>
-    <div class="container ">
+    <div class="site-wrapper">
 
-        <div class="masthead ">
-            <center>
-                <h3 class="text-muted "><a href="topsecret.html ">Stormy's Website</a></h3>
-            </center>
-            <ul class="nav nav-justified ">
+        <div class="site-wrapper-inner">
 
-                <li class="active "><a href="# ">Home</a>
-                </li>
-                <li><a href="http://stormyjet.github.io/blog.html ">Blog</a>
-                </li>
-                <li><a href="http://twitter.com/stormyjet ">Twitter</a>
-                </li>
-                <!-- This line to be replaced with proper source-->
-                <li><a href="https://github.com/stormyjet/stormyjet.github.io ">Source</a>
-                </li>
-                <li><a href="http://meteorgame.github.io ">Meteor Game</a>
-                </li>
-                <li><a href="http://mcfs.github.io ">MCFS</a>
-                </li>
+            <div class="cover-container">
+
+                <div class="masthead clearfix">
+                    <div class="inner">
+                        <center>
+                            <h1 class="masthead-brand">Stormy's Website</h1> 
 
 
-            </ul>
-        </div>
-        <!--<li class="active "><a href="# ">Test</a></li>
-          <li><a href="http://twitter.com/stormyjet ">Twitter</a></li>
-          
-          <!--<li><a href="http://meteorgame.github.io ">Meteor Game</a></li>
-          <li><a href="http://mcfs.github.io ">MCFS</a></li>-->
 
 
-        <center>
-            <p class="nocss ">Whoa there.
-                <br>Looks like the page didn't load properly.
-                <br>Click <a href="index.html ">Here</a> to reload the page. Hopefully it works! Sorry for the inconvenience
-                <br>If you're smart, the CSS didn't load, so this happened. Look at the code for more info.</p>
-            <!-- So when the css doesn't load, the classes for the text don't load because they are contained in the CSS. When it doesn't load, the class that contins the part about the class "nocss " having 0 opacity (and being small etc.) doesn't load. So the browser shows it because it isn't told how to make it look. Yay.-->
-        </center>
+                    </div>
+                </div>
 
-        <!-- Jumbotron -->
+                <div class="inner cover">
+                    <h1 class="cover-heading">Oh boy.</h1>
+                    <p class="lead">Looks like we are in maintainence mode. No StormyJet.com services are currently available. Sorry :(</p>
+                    <p class="lead">
+                        Sorry about this.
+                    </p>
+                </div>
 
-        <div class="jumbotron ">
-            <h1>Hello!</h1>
-            <p class="lead ">My name is Stormy, and I make internet things. Welcome to my website.</p>
-            <p><a class="btn btn-lg btn-info " href="blog.html " role="button ">New Blog Post!</a>
-            </p>
-        </div>
+                <div class="mastfoot">
+                    <div class="inner">
+                        <p>Powered by sNet and Storm Engine. Uses bootstrap for the css.</p>
+                    </div>
+                </div>
 
-        <!-- Example row of columns -->
-        <div class="row ">
-            <div class="col-lg-4 ">
-                <h2>Meteor Game</h2>
-                <p>Meteor Game is a game that I made for no reason. See more info on the site.</p>
-                <p><a class="btn btn-primary " href="http://meteorgame.github.io " role="button ">View details &raquo;</a>
-                </p>
             </div>
-            <div class="col-lg-4 ">
-                <h2>MCFS</h2>
-                <p class="text-danger ">Update: April Fools :)</p>
-                <p>Matt Collins Fanservers, the fanservers dedicated to Mattophobia</p>
-                <p><a class="btn btn-primary " href="http://mcfs.github.io " role="button ">View details &raquo;</a>
-                </p>
-            </div>
-            <div class="col-lg-4 ">
-                <h2>sNet</h2>
-                <p>sNet is a way to unify many websites. It's pretty cool I think.</p>
-                <p><a class="btn btn-primary " href="network.html " role="button ">View details &raquo;</a>
-                </p>
-            </div>
-        </div>
 
-        <!-- Site footer -->
-        <div class="footer ">
-            <p>Powered by <a href="dashboard.html ">Storm Engine</a> and <a href="network.html ">sNet</a>.
-            </p>
         </div>
 
     </div>
-    <!-- /container -->
-
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="../../dist/js/bootstrap.min.js"></script>
+    <script src="../../assets/js/docs.min.js"></script>
 </body>
 
 </html>
