--- a/UnderConstruction/indexmaintainence.html
+++ b/UnderConstruction/indexmaintainence.html
@@ -29,37 +29,70 @@
     <meta name="msapplication-square310x310logo" content="/img/mstile-310x310.png">
     <meta name="msapplication-wide310x150logo" content="/img/mstile-310x150.png">
 
-    <title>404</title>
+
+    <title>Stormy's Site</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
 
+    <link href="css/cover.css" rel="stylesheet">
+
+    <!-- Just for debugging purposes. Don't actually copy this line! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+</head>
+
+<body>
+
+    <div class="site-wrapper">
+
+        <div class="site-wrapper-inner">
+
+            <div class="cover-container">
+
+                <div class="masthead clearfix">
+                    <div class="inner">
+                        <center>
+                            <h1 class="masthead-brand">Stormy's Website</h1> 
 
 
-    <link href="css/justified-nav.css" rel="stylesheet">
-    <div class="container">
-        <div</div>
-            <center>
 
-                <body>
-                    <div class="container">
 
-                        <div class="masthead">
-                            <center>
-                                <h1 class="text-muted">You messed up.</h1>
-
-                            </center>
-                        </div>
                     </div>
-                    <p class="notfound">
-                        <script>
-                            document.write(document.URL);
-                        </script>
-                        isn't even real.</p>
-                    <p class="lead"><a href="index.html">Wanna go to the home page?</a>
+                </div>
+
+                <div class="inner cover">
+                    <h1 class="cover-heading">Oh boy.</h1>
+                    <p class="lead">Looks like we are in maintainence mode. No StormyJet.com services are currently available. Sorry :(</p>
+                    <p class="lead">
+                        Sorry about this.
                     </p>
-                </body>
-            </center>
+                </div>
+
+                <div class="mastfoot">
+                    <div class="inner">
+                        <p>Powered by sNet and Storm Engine. Uses bootstrap for the css.</p>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="../../dist/js/bootstrap.min.js"></script>
+    <script src="../../assets/js/docs.min.js"></script>
+</body>
 
 </html>
