--- a/rory.html
+++ b/rory.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>The word Tee in big letters</title>
+<title>The word Rory in big letters</title>
 
 <head>
     <link href="css/teething.css" rel="stylesheet">
