--- a/internetexplorer.html
+++ b/internetexplorer.html
@@ -40,20 +40,7 @@
     <link href="css/justified-nav.css" rel="stylesheet">
     <!-- STYLE SHEET FOR UNI-NAVBAR-->
 
-    <!--[if lt IE 7]>
-    <script type="text/javascript">
 
-   window.location="internetexplorer.html";
-
-</script>
-    <![endif]-->
-    <!--[if gte IE 7]>
-    <script type="text/javascript">
-
-   window.location="internetexplorer.html";
-
-</script>
-    <![endif]-->
 </head>
 
 <body>
@@ -61,13 +48,13 @@
         <!--
         <div class="alert alert-success">
             <p style="font-size:22px"><strong>Wonderful!</strong> You have read this important alert</p>
-        </div>-->
+        </div>
         <div class="alert alert-info">
 
             <p style="font-size:22px;">
                 <strong>Heads Up!</strong> StormyJet.com is under some maintainence. Things may be changed or all access to the site may be blocked.</p>
         </div>
-        <!--<div class="alert alert-warning">
+        <div class="alert alert-warning">
             <p style="font-size:22px"><strong>warning text in bold</strong>warning text</p>
         </div>
         <div class="alert alert-danger">
@@ -82,36 +69,6 @@
     </noscript>
     <div class="container ">
 
-        <div class="masthead ">
-            <center>
-                <h3 class="text-muted "><a href="topsecret.html ">Stormy's Website</a></h3>
-            </center>
-            <ul class="nav nav-justified ">
-
-                <li class="active "><a href="# ">Home</a>
-                </li>
-                <li><a href="http://stormyjet.github.io/blog.html ">Blog</a>
-                </li>
-                <li><a href="http://twitter.com/stormyjet ">Twitter</a>
-                </li>
-                <!-- This line to be replaced with proper source-->
-                <li><a href="https://github.com/stormyjet/stormyjet.github.io ">Source</a>
-                </li>
-                <li><a href="http://meteorgame.github.io ">Meteor Game</a>
-                </li>
-                <li><a href="http://mcfs.github.io ">MCFS</a>
-                </li>
-
-
-            </ul>
-        </div>
-        <!--<li class="active "><a href="# ">Test</a></li>
-          <li><a href="http://twitter.com/stormyjet ">Twitter</a></li>
-          
-          <!--<li><a href="http://meteorgame.github.io ">Meteor Game</a></li>
-          <li><a href="http://mcfs.github.io ">MCFS</a></li>-->
-
-
         <center>
             <p class="nocss ">Whoa there.
                 <br>Looks like the page didn't load properly.
@@ -123,40 +80,37 @@
         <!-- Jumbotron -->
 
         <div class="jumbotron ">
-            <h1>Hello!</h1>
-            <p class="lead ">My name is Stormy, and I make internet things. Welcome to my website.</p>
-            <p><a class="btn btn-lg btn-info " href="blog.html " role="button ">New Blog Post!</a>
+            <h1>Why do you use Internet Explorer?</h1>
+            <p class="lead ">You need to stop</p>
+            <p><a class="btn btn-lg btn-success " href="http://browsehappy.com" role="button ">Click here for a not crap browser</a>
             </p>
         </div>
 
         <!-- Example row of columns -->
         <div class="row ">
             <div class="col-lg-4 ">
-                <h2>Meteor Game</h2>
-                <p>Meteor Game is a game that I made for no reason. See more info on the site.</p>
-                <p><a class="btn btn-primary " href="http://meteorgame.github.io " role="button ">View details &raquo;</a>
+                <h2>End of IE Support</h2>
+                <p>IE support has been dropped due to bad parsing of HTML5, and a LOT of security issues</p>
+
                 </p>
             </div>
             <div class="col-lg-4 ">
-                <h2>MCFS</h2>
-                <p class="text-danger ">Update: April Fools :)</p>
-                <p>Matt Collins Fanservers, the fanservers dedicated to Mattophobia</p>
-                <p><a class="btn btn-primary " href="http://mcfs.github.io " role="button ">View details &raquo;</a>
+                <h2>Stop using IE</h2>
+
+                <p>Internet Explorer is the worst browser out there, consistently scoring low on HTML5 tests</p>
+
                 </p>
             </div>
             <div class="col-lg-4 ">
-                <h2>sNet</h2>
-                <p>sNet is a way to unify many websites. It's pretty cool I think.</p>
-                <p><a class="btn btn-primary " href="network.html " role="button ">View details &raquo;</a>
+                <h2>End of IE</h2>
+                <p>As of 4-25-2014, all IE support is phased out, update your browser now.</p>
+
                 </p>
             </div>
         </div>
 
         <!-- Site footer -->
-        <div class="footer ">
-            <p>Powered by <a href="dashboard.html ">Storm Engine</a> and <a href="network.html ">sNet</a>.
-            </p>
-        </div>
+
 
     </div>
     <!-- /container -->
