--- a/hughes.html
+++ b/hughes.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>The word Tee in big letters</title>
+<title>A message for Hughes</title>
 
 <head>
     <link href="css/teething.css" rel="stylesheet">
@@ -9,7 +9,7 @@
 
 <body>
     <center>
-        <p class="tee">Rory</p>
+        <p class="matt">come back u littl shit</p>
     </center>
 </body>
 
