--- a/network.html
+++ b/network.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+    <script type="text/javascript">
+        <!--
+        function delayer() {
+            window.location = "http://stormyjet.github.io/sNet"
+        }
+         //-->
+    </script>
+
+
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -29,7 +39,7 @@
     <meta name="msapplication-square310x310logo" content="/img/mstile-310x310.png">
     <meta name="msapplication-wide310x150logo" content="/img/mstile-310x150.png">
 
-    <title>404</title>
+    <title>Stormy's Website</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -38,28 +48,36 @@
 
 
     <link href="css/justified-nav.css" rel="stylesheet">
-    <div class="container">
-        <div</div>
-            <center>
+   
+</head>
 
-                <body>
-                    <div class="container">
+<body onLoad="setTimeout('delayer()', 0)">
 
-                        <div class="masthead">
-                            <center>
-                                <h1 class="text-muted">You messed up.</h1>
+        <center>
+            <p class="nocss">Whoa there.
+                <br>Looks like the page didn't load properly.
+                <br>Click <a href="index.html">Here</a> to reload the page. Hopefully it works! Sorry for the inconvenience
+                <br>If you're smart, the CSS didn't load, so this happened. Look at the code for more info.</p>
+            <!-- So when the css doesn't load, the classes for the text don't load because they are contained in the CSS. When it doesn't load, the class that contins the part about the class "nocss" having 0 opacity (and being small etc.) doesn't load. So the browser shows it because it isn't told how to make it look. Yay.-->
+        </center>
 
-                            </center>
-                        </div>
-                    </div>
-                    <p class="notfound">
-                        <script>
-                            document.write(document.URL);
-                        </script>
-                        isn't even real.</p>
-                    <p class="lead"><a href="index.html">Wanna go to the home page?</a>
-                    </p>
-                </body>
-            </center>
+        <!-- Jumbotron -->
+<noscript><center><div class="alert alert-danger">
+                <strong>Hey you! </strong>You need to have Javascript enabled for QuickPages to work, otherwise you will have to click something <strong></strong>EVERY TIME</strong></div></center></noscript>
+        <div class="jumbotron">
+            <h1>Hey!</h1>
+            <p class="lead">This page has a new home, and you should be redirected.</p>
+            <p><a class="btn btn-lg btn-info" href="http://stormyjet.github.io/sNet" role="button">Click here if you are not redirected.</a>
+            </p>
+        </div>
 
+
+
+    </div> <!-- /container -->
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+  </body>
 </html>
