--- a/blog.html
+++ b/blog.html
@@ -79,6 +79,7 @@
 
             </ul>
         </div>
+        <h4 class="text-muted">Programming, Reviews, and yelling at clouds.</h4>
         <!--<li class="active"><a href="#">Test</a></li>
           <li><a href="http://twitter.com/stormyjet">Twitter</a></li>
           
