--- a/blog.html
+++ b/blog.html
@@ -99,7 +99,7 @@
             <p class="lead">Today I worked on some backend stuff for my sites. I also worked on some frontend things as well. I polished up the sNet page.
                 <br>In other news, I made a page that just lists all of the things I used and still use. It's available over at /dashboard. Enjoy it.</p>
             <div class="alert alert-danger">
-            <p style="font-size:22px"><strong>Attention</strong> Spoilers for the movie <strong>Divergent</strong> ahead!</p>
+            <p style="font-size:22px"><strong>Attention!</strong> Spoilers for the movie <strong>Divergent</strong> ahead!</p>
         </div>
             <h2>The Divergent Movie [Spoilers]</h2>
             <br>
