--- a/cancer.html
+++ b/cancer.html
@@ -59,7 +59,7 @@
                 <div class="masthead clearfix">
                     <div class="inner">
                         <center>
-                            <h1 class="masthead-brand"></h1> 
+                            <h1 class="masthead-brand">Cancer Check</h1><br><h2 class="masthead-brand">Is it Cancer</h2>
 
 
 
@@ -68,7 +68,7 @@
                 </div>
 
                 <div class="inner cover">
-                    <h1 style="font-size:62pt">Something big is coming...</h1>
+                    <h1 style="font-size:62pt">coming soon</h1>
 
                     </p>
                 </div>
