--- a/cancer.html
+++ b/cancer.html
@@ -68,8 +68,8 @@
                 </div>
 
                 <div class="inner cover">
-                    <h1 style="font-size:62pt">coming soon</h1>
-
+                    <h1 style="font-size:62pt">Input your symptoms<input></input></h1>
+<div class="btn btn-lg"><a href="results.html">Check your sympotms</a></div>
                     </p>
                 </div>
 
