--- a/cancer.html
+++ b/cancer.html
@@ -62,13 +62,13 @@
                             <h1 class="masthead-brand">Cancer Check</h1><br><h2 class="masthead-brand">Is it Cancer</h2>
 
 
-
+</center>
 
                     </div>
                 </div>
 
                 <div class="inner cover">
-                    <h1 style="font-size:62pt">Input your symptoms<input></input></h1>
+                    <h1 style="font-size:62pt">Input your symptoms<input style="color:black"></input></h1>
 <div class="btn btn-lg"><a href="results.html">Check your sympotms</a></div>
                     </p>
                 </div>
