--- a/cancer.html
+++ b/cancer.html
@@ -30,7 +30,7 @@
     <meta name="msapplication-wide310x150logo" content="/img/mstile-310x150.png">
 
 
-    <title>Stormy's Site</title>
+    <title>Cancer Check</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -66,9 +66,9 @@
 
                     </div>
                 </div>
-
                 <div class="inner cover">
-                    <h1 style="font-size:62pt">Input your symptoms<input style="color:black"></input></h1>
+                    <h1 style="font-size:62pt">Input your symptoms<br>
+                    <input style="color:black"></input></h1>
 <div class="btn btn-lg"><a href="results.html">Check your sympotms</a></div>
                     </p>
                 </div>
