--- a/cancer.html
+++ b/cancer.html
@@ -39,13 +39,7 @@
     <link href="css/cover.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+ 
 </head>
 
 <body>
@@ -68,7 +62,7 @@
                 </div>
                 <div class="inner cover">
                     <h1 style="font-size:62pt">Input your symptoms<br>
-                    <input style="color:black"></input></h1>
+                    <center><input style="color:black">Type your sympotms...</input></h1></center>
 <div class="btn btn-lg"><a href="results.html">Check your sympotms</a></div>
                     </p>
                 </div>
