--- a/cancer.html
+++ b/cancer.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<div align="center">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -61,8 +61,8 @@
                     </div>
                 </div>
                 <div class="inner cover">
-                    <h1 style="font-size:62pt">Input your symptoms<br>
-                    <center><input style="color:black">Type your sympotms...</input></h1></center>
+                    <h1 style="font-size:45pt">Input your symptoms<br>
+                    <center><input style="color:black"></input></h1></center>
 <div class="btn btn-lg"><a href="results.html">Check your sympotms</a></div>
                     </p>
                 </div>
@@ -86,5 +86,5 @@
     <script src="../../dist/js/bootstrap.min.js"></script>
     <script src="../../assets/js/docs.min.js"></script>
 </body>
-
+</div>
 </html>
