--- a/cancer.html
+++ b/cancer.html
@@ -53,15 +53,14 @@
                 <div class="masthead clearfix">
                     <div class="inner">
                         <center>
-                            <h1 class="masthead-brand">Cancer Check</h1><br><h2 class="masthead-brand">Is it Cancer</h2>
-
+                            <h1 class="masthead-brand">Cancer Check</h1><br><br><br>
 
 </center>
 
                     </div>
                 </div>
                 <div class="inner cover">
-                    <h1 style="font-size:45pt">Input your symptoms<br>
+                    <h1 style="font-size:45pt">Input your symptoms<br><br><br>
                     <center><input style="color:black"></input></h1></center>
 <div class="btn btn-lg"><a href="results.html">Check your sympotms</a></div>
                     </p>
