--- a/cancer.html
+++ b/cancer.html
@@ -53,7 +53,7 @@
                 <div class="masthead clearfix">
                     <div class="inner">
                         <center>
-                            <h1 class="masthead-brand">Cancer Check</h1><br><br><br>
+                            <h1 class="masthead-brand">Cancer Check</h1><br><br><br><br><br>
 
 </center>
 
@@ -62,7 +62,7 @@
                 <div class="inner cover">
                     <h1 style="font-size:45pt">Input your symptoms<br><br><br>
                     <center><input style="color:black"></input></h1></center>
-<div class="btn btn-lg"><a href="results.html">Check your sympotms</a></div>
+<div class="btn btn-lg"><a href="results.html">Check now!</a></div>
                     </p>
                 </div>
 
