--- a/cancer.html
+++ b/cancer.html
@@ -59,7 +59,7 @@
                     </div>
                 </div>
                 <div class="inner cover">
-                    <h1 style="font-size:45pt">Input your symptoms<br><br><br>
+                    <h1 style="font-size:45pt">Input your symptoms<br>
                     <center><input style="color:black"></input></h1></center>
 <div class="btn btn-lg"><a href="results.html">Check now!</a></div>
                     </p>
