--- a/cancer.html
+++ b/cancer.html
@@ -58,10 +58,11 @@
 
                     </div>
                 </div>
-                <div class="inner cover">
-                    <h1 style="font-size:45pt">Input your symptoms<br>
+        <br><br><br>
+                        <div class="inner cover">
+                    <h1 style="font-size:45pt">Input your symptoms<br><br>
                     <center><input style="color:black"></input></h1></center>
-<div class="btn btn-lg"><a href="results.html">Check now!</a></div>
+<a class="btn btn-lg" href="results.html">Check now!</a>
                     </p>
                 </div>
 
