--- a/cancer.html
+++ b/cancer.html
@@ -62,7 +62,12 @@
                         <div class="inner cover">
                     <h1 style="font-size:45pt">Input your symptoms<br><br>
                     <center><input style="color:black"></input></h1></center>
-<a class="btn btn-lg" href="results.html">Check now!</a>
+
+
+
+<button type="button" class="btn btn-default btn-lg">
+  <span class="glyphicon glyphicon-search"></span><a href="results.html">Search the Database</a>
+</button>
                     </p>
                 </div>
 
