--- a/cancer.html
+++ b/cancer.html
@@ -65,7 +65,7 @@
 
 
 
-<button type="button" class="btn btn-default btn-lg">
+<button type="button" class="btn btn-default btn-lg" style="color:black">
   <span class="glyphicon glyphicon-search"></span><a href="results.html">Search the Database</a>
 </button>
                     </p>
