--- a/cancer.html
+++ b/cancer.html
@@ -65,8 +65,8 @@
 
 
 
-<button type="button" class="btn btn-default btn-lg" style="color:black">
-  <span class="glyphicon glyphicon-search"></span><a href="results.html">Search the Database</a>
+<button type="button" class="btn btn-default btn-lg">
+  <span class="glyphicon glyphicon-search"></span><a style="color:black" href="results.html">Search the Database</a>
 </button>
                     </p>
                 </div>
