--- a/cancer.html
+++ b/cancer.html
@@ -66,7 +66,7 @@
 
 
 <button type="button" class="btn btn-default btn-lg">
-  <span class="glyphicon glyphicon-search"></span><a style="color:lightgray" href="results.html">Search the Database</a>
+  <span class="glyphicon glyphicon-search"></span><a style="color:gray" href="results.html">Search the Database</a>
 </button>
                     </p>
                 </div>
