--- a/cancer.html
+++ b/cancer.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<div align="center">
+<div align="center" style"vertical-align:middle;">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -66,7 +66,7 @@
 
 
 <button type="button" class="btn btn-default btn-lg">
-  <span class="glyphicon glyphicon-search"></span><a style="color:black;size:22pt;align:right" href="results.html">Search the Database</a>
+  <span class="glyphicon glyphicon-search"></span><a style="color:black;size:22pt;align:right" href="results.html">  Search the Database</a>
 </button>
                     </p>
                 </div>
