--- a/cancer.html
+++ b/cancer.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<div align="center" style"vertical-align:middle;">
+<div align="center" style="vertical-align:middle;">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
