--- a/cancer.html
+++ b/cancer.html
@@ -60,13 +60,14 @@
                 </div>
         <br><br><br>
                         <div class="inner cover">
-                    <h1 style="font-size:45pt;align:left">Input your symptoms<br><br>
-                    <center><input style="color:black"></input></h1></center>
+                    <h1 style="font-size:45pt;align:left">Input your symptoms</h1><br><br>
+                    <center><h1 style="position:relative;"><input style="color:black"></input></h1></center>
 
 
 
+<div=
 <button type="button" class="btn btn-default btn-lg">
-  <span class="glyphicon glyphicon-search"></span><a style="color:black;size:22pt;align:right" href="results.html">  Search the Database</a>
+  <span class="glyphicon glyphicon-search"></span><a style="color:black;size:22pt;position:relative;" href="results.html">  Search the Database</a>
 </button>
                     </p>
                 </div>
