--- a/cancer.html
+++ b/cancer.html
@@ -59,15 +59,15 @@
                     </div>
                 </div>
         <br><br><br>
-                        <div class="inner cover">
+                        <div style="vertical-align:middle;">
                     <h1 style="font-size:45pt;align:center">Input your symptoms</h1><br><br>
                     <center><h1 style="float:left;font-size:45pt;"><input style="color:black"></input></h1></center>
 
 
 
-<div=
+<div style="vertical-align:middle;">
 <button type="button" class="btn btn-default btn-lg">
-  <span class="glyphicon glyphicon-search"></span><a style="color:black;size:22pt;float:right;" href="results.html">  Search the Database</a>
+  <span class="glyphicon glyphicon-search"></span><a style="color:black;float:right;" href="results.html">  Search the Database</a>
 </button>
                     </p>
                 </div>
