--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
         <div class="alert alert-success">
             <p style="font-size:22px"><strong>Wonderful!</strong> You have read this important alert</p>
         </div>-->
-        <div class="alert alert-info">
+        <div class="alert alert-warning">
 
             <p style="font-size:22px;">
-                <strong>Heads Up!</strong> StormyJet.com is under some maintainence. Things may be changed or all access to the site may be blocked.</p>
+                <strong>Heads Up!</strong>We're under some heavy load. Things may be slow! Sorry :(</p>
         </div>
         <!--<div class="alert alert-warning">
             <p style="font-size:22px"><strong>warning text in bold</strong>warning text</p>
