--- a/cancer.html
+++ b/cancer.html
@@ -60,7 +60,7 @@
                 </div>
         <br><br><br>
                         <div style="vertical-align:middle;">
-                    <h1 style="font-size:45pt;align:center">Input your symptoms</h1><br><br>
+                    <h1 style="font-size:45pt;align:center">Input your symptoms that you see</h1><br><br>
                     <center><h1 style="float:left;font-size:45pt;"><input style="color:black"></input></h1></center>
 
 
