--- a/cancer.html
+++ b/cancer.html
@@ -61,7 +61,7 @@
         <br><br><br>
                         <div style="vertical-align:middle;">
                     <h1 style="font-size:45pt;align:center">Input your symptoms that you see</h1><br><br>
-                    <center><h1 style="float:left;font-size:45pt;"><input style="color:black"></input></h1></center>
+                    <center><h1 style="float:left;font-size:45pt;"><input type="submit" style="color:black"></input></h1></center>
 
 
 
