--- a/cancer.html
+++ b/cancer.html
@@ -61,13 +61,13 @@
         <br><br><br>
                         <div style="vertical-align:middle;">
                     <h1 style="font-size:45pt;align:center">Input your symptoms that you see</h1><br><br>
-                    <center><h1 style="float:left;font-size:45pt;"><input type="submit" style="color:black"></input></h1></center>
+                    <center><h1 style="float:left;font-size:45pt;"><input style="color:black"></input></h1></center>
 
 
 
 <div style="vertical-align:middle;">
-<button type="button" class="btn btn-default btn-lg">
-  <span class="glyphicon glyphicon-search"></span><a style="color:black;float:right;" href="results.html">      Search the Database</a>
+<button type="button" class="btn btn-lg">
+ <a style="color:black;float:right;" href="results.html">Click here (or press enter) to search</a>
 </button>
                     </p>
                 </div>
