--- a/cancer.html
+++ b/cancer.html
@@ -62,6 +62,7 @@
                         <div style="vertical-align:middle;">
                     <h1 style="font-size:45pt;align:center">Input your symptoms that you see</h1><br><br>
                     <center><h1 style="float:left;font-size:45pt;"><input style="color:black"></input></h1></center>
+                    <input type="submit" style="height: 0px; width: 0px; border: none; padding: 0px;" hidefocus="true" />
 
 
 
