--- a/cancer.html
+++ b/cancer.html
@@ -68,7 +68,7 @@
 
 <div style="vertical-align:middle;">
 <button type="button" class="btn btn-lg">
- <a style="color:black;float:right;" href="results.html">Click here (or press enter) to search</a>
+ <a style="color:black;float:right;" href="results.html">Cancer Check</a>
 </button>
                     </p>
                 </div>
