--- a/results.html
+++ b/results.html
@@ -29,7 +29,7 @@
     <meta name="msapplication-square310x310logo" content="/img/mstile-310x310.png">
     <meta name="msapplication-wide310x150logo" content="/img/mstile-310x150.png">
 
-    <title>404</title>
+    <title>Loading</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -54,10 +54,17 @@
                     </div>
                     <p class="notfound">
                         
-                        We are now loading your results...</p>
+                        We are now loading your results...</p><br>
+                       <h4>This is not a long process, it may take up to 10 seconds.</h4>
                     <div class="progress progress-striped active">
   <div class="progress-bar"  role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
     <span class="sr-only">75% Complete</span>
+   <script>
+    setTimeout(function () {
+   window.location.href = "finalresults.html";
+}, 9000);
+</script
+
   </div>
 </div>
                     </p>
