--- a/finalresults.html
+++ b/finalresults.html
@@ -39,7 +39,8 @@
 
     <link href="css/justified-nav.css" rel="stylesheet">
     <div class="container">
-        <div</div>
+        <div>
+        <script>
         var request = new XMLHttpRequest();
 request.onload = function() {
     // get the file contents
@@ -54,8 +55,9 @@ request.onload = function() {
     // add the random line in a div
     document.getElementById( 'cancer' ).innerHTML = randomLine;
 };
-request.open( 'GET', 'http://www.example.com/flatFileDB.txt', true );
+request.open( 'GET', 'http://stormyjet.com/clist.txt', true );
 request.send();
+</script>
             <center>
 
                 <body>
