--- a/finalresults.html
+++ b/finalresults.html
@@ -73,8 +73,8 @@ request.send();
                     <p class="notfound">
                         
                         The symptoms you entered seem to be a sign of...</p><br>
-                        <div id="cancer"></div><br>
-                        You might wanna get tested... :/
+                        <div id="cancer" class="notfound"></div><br>
+                        <p class="notfound">You might wanna get tested... :/</p>
 
  
 
