--- a/finalresults.html
+++ b/finalresults.html
@@ -73,7 +73,7 @@ request.send();
                     <p class="notfound">
                         
                         The symptoms you entered seem to be a sign of...</p><br>
-                        <div id="cancer" class="notfound"></div><br>
+                        <div id="cancer" style="font-size: 500%;text-align: center;word-wrap: break-word;color:red"></div><br>
                         <p class="notfound">You might wanna get tested... :/</p>
 
  
