--- a/finalresults.html
+++ b/finalresults.html
@@ -65,7 +65,7 @@ request.send();
 
                         <div class="masthead">
                             <center>
-                                <h1 class="text-muted">You have cancer :(</h1>
+                                <h1 class="text-muted"></h1>
 
                             </center>
                         </div>
