--- a/blog.html
+++ b/blog.html
@@ -93,7 +93,9 @@
         <!-- Jumbotron -->
 
         <div class="jumbotron">
-            <h1>New 404 page</h1>
+        <h1>I made a bad thing...</h1>
+        <p>Remember the days of the internet whenever you searched some signs of some illness it always said cancer? I made a thing, go to /cancer, type in anything, and it will load a random cancer. Cool, but kinda insensitive.</p>
+            <h2>New 404 page</h2>
             <p class="lead">Today I worked on a brand new 404 page. Try going to /404 or any page that probably isnt real. Cool amirite.</p>
             <h2>Backend things today</h2>
             <p class="lead">Today I worked on some backend stuff for my sites. I also worked on some frontend things as well. I polished up the sNet page.
