--- a/finalresults.html
+++ b/finalresults.html
@@ -83,5 +83,6 @@ request.send();
                     </p>
                 </body>
             </center>
+            <small class="text-muted">Hey! This is a joke, don't take it seriously! Also don't call me insensitive. If this makes a lot of complaints it will be taken down.</small>
 
 </html>
