--- a/finalresults.html
+++ b/finalresults.html
@@ -82,7 +82,7 @@ request.send();
 </div>
                     </p>
                 </body>
-            </center>
-            <p class="text-muted">Hey! This is a joke, don't take it seriously! Also don't call me insensitive. If this makes a lot of complaints it will be taken down.</p>
-
+            </center><foot>
+            <p>Hey! This is a joke, don't take it seriously! Also don't call me insensitive. If this makes a lot of complaints it will be taken down.</p>
+</foot>
 </html>
