--- a/pokecrate/index.html
+++ b/pokecrate/index.html
@@ -3,33 +3,23 @@
 <!-- POKECRATE PEOPLE! HELLO!
 I'm stormyjet and I make things like this sometimes. You may use this code for free on one condition, I get some credit. I added it discreetly at the bottom. Have fun. -->
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="/img/favicon.ico">
-    <link rel="apple-touch-icon" sizes="57x57" href="/img/apple-touch-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/img/apple-touch-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/img/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/img/apple-touch-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/img/apple-touch-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/img/apple-touch-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/img/apple-touch-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/img/apple-touch-icon-152x152.png">
-    <link rel="icon" type="image/png" href="/img/favicon-196x196.png" sizes="196x196">
-    <link rel="icon" type="image/png" href="/img/favicon-160x160.png" sizes="160x160">
-    <link rel="icon" type="image/png" href="/img/favicon-96x96.png" sizes="96x96">
-    <link rel="icon" type="image/png" href="/img/favicon-16x16.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="/img/favicon-32x32.png" sizes="32x32">
-    <meta name="msapplication-TileColor" content="#b91d47">
-    <meta name="msapplication-TileImage" content="/img/mstile-144x144.png">
-    <meta name="msapplication-square70x70logo" content="/img/mstile-70x70.png">
-    <meta name="msapplication-square144x144logo" content="/img/mstile-144x144.png">
-    <meta name="msapplication-square150x150logo" content="/img/mstile-150x150.png">
-    <meta name="msapplication-square310x310logo" content="/img/mstile-310x310.png">
-    <meta name="msapplication-wide310x150logo" content="/img/mstile-310x150.png">
-
+    <link rel="shortcut icon" href="/img/favicon/favicon.ico">
+<link rel="apple-touch-icon" sizes="57x57" href="/img/favicon/apple-touch-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="114x114" href="/img/favicon/apple-touch-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="72x72" href="/img/favicon/apple-touch-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="144x144" href="/img/favicon/apple-touch-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="60x60" href="/img/favicon/apple-touch-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="120x120" href="/img/favicon/apple-touch-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="76x76" href="/img/favicon/apple-touch-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="152x152" href="/img/favicon/apple-touch-icon-152x152.png">
+<link rel="icon" type="image/png" href="/img/favicon/favicon-196x196.png" sizes="196x196">
+<link rel="icon" type="image/png" href="/img/favicon/favicon-160x160.png" sizes="160x160">
+<link rel="icon" type="image/png" href="/img/favicon/favicon-96x96.png" sizes="96x96">
+<link rel="icon" type="image/png" href="/img/favicon/favicon-16x16.png" sizes="16x16">
+<link rel="icon" type="image/png" href="/img/favicon/favicon-32x32.png" sizes="32x32">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="/img/favicon/mstile-144x144.png">
+<meta name="msapplication-config" content="/img/favicon/browserconfig.xml">
     <title>PokeCrate</title>
 
     <!-- Bootstrap core CSS -->
@@ -63,10 +53,10 @@ I'm stormyjet and I make things like this sometimes. You may use this code for f
         <div class="alert alert-success">
             <p style="font-size:22px"><strong>Wonderful!</strong> You have read this important alert</p>
         </div>-->
-        <!--<div class="alert alert-danger">
+        <!--<div class="alert alert-info">
 
             <p style="font-size:22px;">
-                <strong>Attention!</strong> highway to the DANGER ZONE</p>
+                <strong>Attention!</strong>informative info</p>
         </div>-->
         <!--<div class="alert alert-warning">
             <p style="font-size:22px"><strong>warning text in bold</strong>warning text</p>
