link updates and closed a tag

--- a/pokecrate/index.html
+++ b/pokecrate/index.html
@@ -97,14 +97,14 @@ I'm stormyjet and I make things like this sometimes. You may use this code for f
         <center>
             <p class="nocss ">Whoa there.
                 <br>Looks like the page didn't load properly.
-                <br>Click <a href="index.html ">Here</a> to reload the page. Hopefully it works! Sorry for the inconvenience
+                <br>Click <a href="index.html ">Here</a> to reload the page. Hopefully it works! Sorry for the inconvenience</p>
         </center>
 
         <!-- Jumbotron -->
 <body>
         <div class="jumbotron ">
             <h1>Welcome PokeFans!</h1>
-            <p class="lead ">Do you love Pokémon as much as we do? Subscribe today and start receiving stuff you cannot find anywhere else.  We are currently working with some vary talented artist to bring you exclusive Pokémon shirts just available here at PokeCrate.  We are working hard every day to bring you ALL POKEMON ITEMS, ALL THE TIME.  Follow us on Twitter, Facebook, Google+ and even Youtube for updates, news, new products, even special events and GIVEAWAYS.  We are bringing Pokémon tournaments and special events to PokeCrate. Don't delay! Your PokeCrate awaits you.</p>
+            <p class="lead ">Do you love Pokémon as much as we do? Subscribe today and start receiving stuff you cannot find anywhere else.  We are currently working with some vary talented artist to bring you exclusive Pokémon shirts just available here at PokeCrate.  We are working hard every day to bring you ALL POKEMON ITEMS, ALL THE TIME.  Follow us on <a href="https://twitter.com/pokecrate">Twitter</a>, <a href="https://www.facebook.com/PokeCrate">Facebook</a>, Google+ and even <a href="https://www.youtube.com/channel/UC8AcgrP-FyF1QRFGGbLgJWQ">YouTube</a> for updates, news, new products, even special events and GIVEAWAYS.  We are bringing Pokémon tournaments and special events to PokeCrate. Don't delay! Your PokeCrate awaits you.</p>
             <p><a class="btn btn-lg btn-info " href="subscribe.html" role="button ">Get yours today!</a>
             </p>
         </div>
