--- a/pokecrate/index.html
+++ b/pokecrate/index.html
@@ -76,11 +76,11 @@ I'm stormyjet and I make things like this sometimes. You may use this code for f
 
                 <li class="active "><a href="#">Home</a>
                 </li>
-                <li><a href="http://stormyjet.github.io/blog.html ">About</a>
+                <li><a href="about.html">About</a>
                 </li>
-                <li><a href="http://twitter.com/stormyjet ">Subscription</a>
+                <li><a href="subscribe.html">Subscription</a>
                 </li>
-                <li><a href="https://github.com/stormyjet/stormyjet.github.io ">Contact</a>
+                <li><a href="contact.html">Contact</a>
                 </li>
  
 
