fixed the paragraph, grammar too

--- a/pokecrate/about.html
+++ b/pokecrate/about.html
@@ -104,14 +104,15 @@ I'm stormyjet and I make things like this sometimes. You may use this code for f
 <body>
         <div class="jumbotron ">
             <h2>About Us</h2>
-            <p class="lead ">Here at PokCrate we ABSOLUTELY love Pokémon, and it's all we can think about.  We started this company with one goal in mind, which was to provide awesome Pokémon merchandise to people like us.  What better way to enjoy Pokémon than receiving random Pokémon items every month?  As Pokémon collectors we followed Pokémon throughout the years since it first reached the states in 1998.  So be prepared for some rare out of print stuff.  We hope to bring you very awesome exclusive stuff too.  I can't really say too much though..</p>
+            <p class="lead ">Here at PokeCrate we ABSOLUTELY love Pokémon, and it's all we can think about.  We started this company with one goal in mind, which was to provide awesome Pokémon merchandise to people like us.  What better way to enjoy Pokémon than receiving random Pokémon items every month?  As Pokémon collectors we followed Pokémon throughout the years since it first reached the states in 1998.  So be prepared for some rare out of print stuff.  We hope to bring you very awesome exclusive stuff too.  I can't really say too much though..</p>
             
 <!-- img goes here-->
             <h3>How it Works</h3>
-<p class="lead ">Here at PokCrate we ABSOLUTELY love Pokémon, and it's all we can think about.  We started this company with one goal in mind, which was to provide awesome Pokémon merchandise to people like us.  What better way to enjoy Pokémon than receiving random Pokémon items every month?  As Pokémon collectors we followed Pokémon throughout the years since it first reached the states in 1998.  So be prepared for some rare out of print stuff.  We hope to bring you very awesome exclusive stuff too.  I can't really say too much though..</p>
+<p class="lead ">You subscribe to a plan and you don't have to worry about paying every month because it auto renews (You can cancel at any time after the first month).  We will ship your crate the second week of the month unless stated otherwise.  Receive and enjoy your PokeCrate with random Pokemon merchandise shipped right to your door. </p>
             <p><a class="btn btn-lg btn-info " href="subscribe.html" role="button ">Subscribe Today!</a>
             </p>
-       
+       </div>
+    </body>
 
         <!-- Site footer -->
         <div class="footer ">
