update form and remove some thing

--- a/pokecrate/subscribe.html
+++ b/pokecrate/subscribe.html
@@ -110,7 +110,7 @@ I'm stormyjet and I make things like this sometimes. You may use this code for f
         </div>
 </body>
     
-        <div class="wsb-htmlsnippet-element shadow_curved_horizontal">
+        <center>
 <!-- BEGIN FOXYCART FILES -->
 <link rel="stylesheet" href="//cdn.foxycart.com/static/scripts/colorbox/1.3.23/style1_fc/colorbox.css?ver=1" type="text/css" media="screen" charset="utf-8" />
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js" type="text/javascript" charset="utf-8"></script>
@@ -140,7 +140,7 @@ I'm stormyjet and I make things like this sometimes. You may use this code for f
 </select>
       <input type="submit" value="Subscribe">
  </form> 
- </div>
+ </center>
 
     <foot>
         <!-- Example row of columns -->
