form updates again

--- a/pokecrate/subscribe.html
+++ b/pokecrate/subscribe.html
@@ -140,6 +140,7 @@ I'm stormyjet and I make things like this sometimes. You may use this code for f
 </select>
       <input type="submit" value="Subscribe">
  </form> 
+    <p style="color:red">Your PokeCrates are typically shipped out the second week of every month.  PokeCrates will sometimes feature shirts so we will save your shirt size so we can ship accordingly.</p>
  </center>
 
     <foot>
