--- a/pokecrate/subscribe.html
+++ b/pokecrate/subscribe.html
@@ -140,7 +140,7 @@ I'm stormyjet and I make things like this sometimes. You may use this code for f
 </select>
       <input type="submit" value="Subscribe">
  </form> 
-    <p style="color:red">Your PokeCrates are typically shipped out the second week of every month.  PokeCrates will sometimes feature shirts so we will save your shirt size so we can ship accordingly.</p>
+    <kbd><p style="color:red">Your PokeCrates are typically shipped out the second week of every month.  PokeCrates will sometimes feature shirts so we will save your shirt size so we can ship accordingly.</p></kbd>
  </center>
 
     <foot>
@@ -168,7 +168,7 @@ I'm stormyjet and I make things like this sometimes. You may use this code for f
 
         <!-- Site footer -->
         <div class="footer ">
-            <p><a href="www.stormyjet.com">Stormy</a> made this.
+            <p><a href="http://www.stormyjet.com">Stormy</a> made this.
             </p>
         </div>
 
