--- a/pokecrate/index.html
+++ b/pokecrate/index.html
@@ -134,7 +134,7 @@ I'm stormyjet and I make things like this sometimes. You may use this code for f
 
         <!-- Site footer -->
         <div class="footer ">
-            <p><a href="www.stormyjet.com">Stormy</a> made this.
+            <p><a href="http://www.stormyjet.com">Stormy</a> made this.
             </p>
         </div>
 
