update the text and stuff

--- a/pokecrate/subscribe.html
+++ b/pokecrate/subscribe.html
@@ -120,7 +120,7 @@ I'm stormyjet and I make things like this sometimes. You may use this code for f
       name=Monthly Subscription&
       price=25&
       sub_frequency=1m">
- POKECRATE SUBSCRIPTION</a> 
+ Subscribe to PokeCrate today!</a> 
 
 <form action="https://Pokecrate.foxycart.com/cart" method="post" accept-charset="utf-8">
       <input type="hidden" name="name" value="PokeCrate Subscription">
@@ -147,14 +147,14 @@ I'm stormyjet and I make things like this sometimes. You may use this code for f
         <!-- Example row of columns -->
         <div class="row ">
             <div class="col-lg-4 ">
-                <h2>MasterCrate</h2>
-                <p>Every month subscribers will automatically be entered for a chance to win our MasterCrate.  Chosen at random, someone will win this special crate that will contain... A ORIGINAL BASE SET CHARIZARD! And other cool Pokemon stuff too! Will you be this months winner?</p>
+                <h2>Custom Shirts</h2>
+                <p>Every so often our PokeCrates will contain custom made Pokémon shirts.  Our awesome shirts are drawn out by a fellow Pokémon fan just like you.  Once we have your shirt size it will be saved on file for your next shirts. Follow us on TWITTER and FACEBOOK for contest and more! Winners will have their design featured in one of our shirts! </p>
                 <p><a class="btn btn-primary " href="subscribe.html" role="button ">Subscribe Now &raquo;</a>
                 </p>
             </div>
             <div class="col-lg-4 ">
-                <h2>Our Crates</h2>
-                <p>Our PokeCrates throughout the months will feature many Pokemon items, some will feature shirts, others out of print booster packs, and even themed decks among other Pokemon items.  One things for sure though, every crate will contain some sort of Pokemon plush. You guys can count on it.</p>
+                <h2>Guaranteed Plush</h2>
+                <p>One may wonder what will be in our next Pokecrate.. but one thing it will have for sure is a Pokémon plush toy.  We thought you guys would enjoy these because we sure do.  They are perfect for decorating your room, office, car, and many other things.  We have seen people be very creative.  These plushes will range from size and quality, but will all be cute and stuff.  One in every Pokecrate, how cool is that? </p>
                 <p><a class="btn btn-primary " href="subscribe.html" role="button ">Subscribe Now &raquo;</a>
                 </p>
             </div>
