test to see if removing div will make it not dumb

--- a/pokecrate/subscribe.html
+++ b/pokecrate/subscribe.html
@@ -145,24 +145,19 @@ I'm stormyjet and I make things like this sometimes. You may use this code for f
 
     <foot>
         <!-- Example row of columns -->
-        <div class="row ">
-            <div class="col-lg-4 ">
+       <!-- <div class="row ">
+            <div class="col-lg-4 ">-->
                 <h2>Custom Shirts</h2>
-                <p>Every so often our PokeCrates will contain custom made Pokémon shirts.  Our awesome shirts are drawn out by a fellow Pokémon fan just like you.  Once we have your shirt size it will be saved on file for your next shirts. Follow us on TWITTER and FACEBOOK for contest and more! Winners will have their design featured in one of our shirts! </p>
-                <p><a class="btn btn-primary " href="subscribe.html" role="button ">Subscribe Now &raquo;</a>
-                </p>
+                <p>Every so often our PokeCrates will contain custom made Pokémon shirts.  Our awesome shirts are drawn out by a fellow Pokémon fan just like you.  Once we have your shirt size it will be saved on file for your next shirts. Follow us on <a href="http://twitter.com/pokecrate">Twitter</a> and <a href="https://www.facebook.com/PokeCrate">Facebook</a> for contest and more! Winners will have their design featured in one of our shirts! </p>
+
             </div>
-            <div class="col-lg-4 ">
+            <!--<div class="col-lg-4 ">-->
                 <h2>Guaranteed Plush</h2>
                 <p>One may wonder what will be in our next Pokecrate.. but one thing it will have for sure is a Pokémon plush toy.  We thought you guys would enjoy these because we sure do.  They are perfect for decorating your room, office, car, and many other things.  We have seen people be very creative.  These plushes will range from size and quality, but will all be cute and stuff.  One in every Pokecrate, how cool is that? </p>
-                <p><a class="btn btn-primary " href="subscribe.html" role="button ">Subscribe Now &raquo;</a>
-                </p>
+
             </div>
             <div class="col-lg-4 ">
-                <h2>something else</h2>
-                <p>goes here</p>
-                <p><a class="btn btn-primary " href="topsecret.html" role="button ">and then a link to somewhere... &raquo;</a>
-                </p>
+
             </div>
         </div>
 
